# ai-trace

./: README.md  pyproject.toml
ai_trace/: __init__.py  receipts.py  tracer.py
tests/: test_receipts.py
